# sdk-agent-with-python

./: .env.sample  .gitignore  README.md  pyproject.toml  test.rest
app/: main.py
app/agents/cashflow/: __init__.py  activity_handler.py  agent.py  plugin.py
app/agents/cashflow/data/: customer-portfolios.json
app/agents/cashflow/data/scripts/: generate_transactions.py
app/agents/cashflow/services/: cashflow_service.py
app/models/: agent_creation_requests.py  agent_request.py  custom_agent.py  enumerations.py
app/utils/: response_parser.py  tracing.py
data/: bank-transactions.json
